# ikigai

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_INDEX.md  CHANGELOG-2026-06-07.md  CLAUDE.md  CLUSTER_PLAN.md  CLUSTER_PROJ.md  CLUSTER_STUDY.md  CONCEPTUAL_MODEL.md  OPERATIONAL_GUIDE.md  README.md  SYSTEMS_TOPOLOGY.md  __init__.py  cli.py  config.py  session-ses_118c.md  session-ses_1458.md  verify_mesh.py  verify_mesh_v2.py  vibe_ops.db
life-ops/: README.md  SPEC.md  pyproject.toml
life-ops/.cursor/rules/: submodule-life-tatics.mdc
life-ops/ikigai/: README.md  SPEC.md  pyproject.toml
life-ops/ikigai/tests/: conftest.py  test_cli.py  test_constants.py  test_entities.py  test_enums.py  test_exceptions.py  test_heuristics.py  test_propagation.py  test_scoring.py  test_state_machines.py  test_types.py
life-ops/life_tatics/: Planning_notes.md  __init__.py  cli.py  time-lenghts_reviews.md
life-ops/life_tatics/domain/: screentime.py
life-ops/operational/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  fix_quotes.py  mypy.ini  output.txt  pyproject.toml  pytest.ini  ruff.toml  uv.toml  verify_sprint.py
life-ops/operational/agents/: __init__.py
life-ops/operational/datasets/: generate_6month_dataset.py
life-ops/operational/docs/: INTEGRATION-BACKLOG.md  ROADMAP.md  SYNTHETIC_DATASET_SPEC.md  TERMINAL_DESIGN_AUDIT.md  golden.csv  synthetic.csv
life-ops/operational/medic/: Makefile  README.md  go.mod  go.sum
life-ops/operational/scripts/: lint.sh  manual_test.py  test.sh  typecheck.sh  verify_sprint.sh
life-ops/operational/test_results/: manual_test_20260622_160056.csv  manual_test_20260622_160744.csv  manual_test_20260622_161850.csv  manual_test_20260622_162040.csv  usability_report_20260622_160056.md  usability_report_20260622_160744.md  usability_report_20260622_161850.md  usability_report_20260622_162040.md
life-ops/operational/workflows/: daily_pipeline.yaml  pav_qa_pipeline.yaml
life-ops/planner/: 2026-01-11-study-plan.md  81d33ec8-c354-44c4-b846-575f26cb7ca3_time-lenghts_reviews.md  Points_of_premisses-task-habits.md  SCALAR_DECOMPOSITION_BACKLOG.md
life-ops/planner/ikigai_planning/: README.md  ikigai_4_vectors.md  ikigai_meta_heuristics.md  ikigai_north_star_metrics.md  ikigai_propagation.md
life-ops/tests/qa_harness/: cli_commands.feature  test_cli_harness.py
vibe-ops/: IMPLEMENTATION_LOG.md  SPEC.md  dry_run.py  pyproject.toml  requirements.txt  run_loop.ps1  task.bat  test_vibe.db  vibe_ops.db
vibe-ops/.cursor/rules/: append-only.mdc
vibe-ops/architecture/: ADR-001-data-flow-topology.md  ADR-002-mesh-contracts-state-machines.md  ADR-003-ikigai-as-meta-brain.md  ADR-004-hybrid-rag-strategy.md  ADR-005-data-mesh-topology.md  README.md
vibe-ops/artifacts/: pm-agnostic-metadata.md  sample_topic.md  topology-diagrams.md
vibe-ops/base/: IKIGAi.md  Produtividade Algorítmica Visual.md  chat-Sistema Prático de Aprendizado Cibernético.txt  chat-export-1776975058981.json
vibe-ops/chroma_db/: chroma.sqlite3
vibe-ops/context/: Data-Primitives-MOC.md  Data-Process-MOC.md  Database-Comparison-MOC.md  Day Logger Program Documentation.md  chat-Data Mesh Comprehensive Guide.md
vibe-ops/contracts/: roadmap_v1.json  study_topic_v1.json
vibe-ops/doc/: 01-data-mesh-strategy.md  01.5-data-contracts-and-pipelines.md  03-data-mesh-enrichment.md  solucoes_extensoes_tw.md
vibe-ops/migrations/: 001_create_dev_cluster_tables.sql  002_roadmap_sync_v1.sql  003_epistemic_priority_view.sql  004_period_reports.sql  005_vault_sync.sql
vibe-ops/migrations/versions/: 001_create_dev_cluster.py
vibe-ops/planning/: CHECKPOINT-2026-06-07-pre-development.md  CLUSTER_PLAN_BRD.md  CLUSTER_PLAN_CLI_SPEC.md  CLUSTER_PLAN_DATA_MODEL.md  CLUSTER_PLAN_ROADMAP.md  CLUSTER_PLAN_USER_STORIES.md  PRD-01-temporal-engine.md  PRD-02-habit-tracker.md  PRD-03-study-backlog.md  PRD-04-project-execution.md  PRD-05-metrics-health.md  PRD-06-policy-governance.md  PRD-07-ikigai-vectors.md  README.md  TEMPLATE-epic-sprint.md  TEMPLATE-micro-ciclo.md  TEMPLATE-weekly-review.md
vibe-ops/planning/_templates_periodos_v2/: 00-quartely-planning.md  01-sonho.md  02-avaliacao-trimestral.md  03-onda.md  04-revisao-semanal.md  05-relatorio-diario.md  06-quartely-review.md  07-sprint-kickoff.md  08-sprint-retrospective.md  RELEASE-NOTES.md
vibe-ops/schema_registry/: registry.yaml
vibe-ops/scratch/: check_sqlite_vec.py  test_policy.py  test_tasklib.py  test_tasklib_v2.py  test_tasklib_v3.py  test_tasklib_v4.py  test_tasklib_v5.py  test_tasklib_v6.py  test_tasklib_v7.py
vibe-ops/scripts/: audit_github_execution.ps1  search_mesh.py  setup_git_telemetry_hook.ps1  setup_scheduler.ps1  test_mvl_ingestion.py  vibeops_loop.ps1
vibe-ops/specs/: .$concept_sys-archy.drawio.bkp  README.md  SPEC-05-cybernetic-epistemic-mesh.md  concept_sys-archy.drawio  prd-habit-tracker.md  prd-ikigai-vectors.md  prd-metrics-health.md  prd-policy-governance.md  prd-project-execution.md  prd-study-backlog.md  prd-temporal-engine.md  schema-frontmatter-contract-v2.md  schema-frontmatter-contract.md  schema-planner-extension.md  schema-pydantic-models-v2.md  schema-pydantic-models.md  spec-cluster-plan-inputs.md  spec-cluster-plan-pipelines.md  spec-cluster-plan-reports.md
vibe-ops/src/: main.py  vibe_cli.py
vibe-ops/src/agents/: __init__.py
vibe-ops/src/cli/: period_sync_cli.py
vibe-ops/src/contracts/: planning.v1.yaml  registry.yaml  roadmap_sync_v1.py  (+1 more)
vibe-ops/tests/: __init__.py  conftest.py  test_bidirectional_sync.py  test_fixture_smoke.py  test_frontmatter_parser.py  test_full_sync_cycle.py  test_hypothesis_entities.py  test_hypothesis_evaluator.py  test_knowledge_telemetry.py  test_migrations.py  test_mvl_orchestrator.py  test_pae_cli.py  test_pae_nodes.py  test_pae_state.py  test_period_report.py  test_project_entities.py  test_rice_exporter.py  test_study_entities.py  test_sync_code_to_vault.py
vibe-ops/vectors/: README.md  vector-market.md  vector-passion.md  vector-revenue.md  vector-skill.md
vibe-ops/vibeops-tui/: Cargo.toml
(+782 files in other folders)
