[tool.poetry]
name = "life-tatics"
version = "0.1.0"
description = "Standalone time allocation and routine tracking module."
authors = ["Matheus Mendes"]
readme = "README.md"
packages = [{include = "life_tatics"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"

[tool.poetry.scripts]
life-tatics = "life_tatics.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
