[project]
name = "vibe-ops"
version = "0.1.0"
dependencies = [
    "pydantic",
    "sqlalchemy",
    "rich",
    "typer",
    "pyyaml",
    "chromadb",
    "tasklib",
    "python-frontmatter",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "python-frontmatter>=1.1.0",
]
