[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["packages/core", "apps/cli", "apps/tui"]

[tool.uv.sources]
operational-core = { workspace = true }
operational-cli = { workspace = true }
operational-tui = { workspace = true }


[tool.coverage.run]
branch = true
source = ["packages/core/src/operational"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.coverage.paths]
source = ["packages/core/src/operational", "*/site-packages/operational"]
