[project]
name = "operational-tui"
version = "0.1.0"
description = "PAV-OS TUI — Textual interface with plotext charts"
requires-python = ">=3.11"
dependencies = [
    "operational-core",
    "operational-cli",
    "textual>=0.8",
    "plotext>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.4.0,<1.0",
]

[tool.uv.sources]
operational-core = { workspace = true }
operational-cli = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/operational"]
